# rust_webshop

./: Cargo.toml
src/: main.rs  mw_ctx.rs
src/service/: ticket.rs
src/web/: routes_login.rs
