[package]
name = "axum-template"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "= 0.4"
askama = "= 0.12.1"
axum = { version = "= 0.7.6", features = ["ws"] }
async-graphql = "= 7.0.9"
async-graphql-axum = "= 7.0.9"
jsonwebtoken = "= 9.3.0"
once_cell = "= 1.19.0"
serde = { version = "= 1.0.210", features = ["derive"] }
serde_json = "= 1.0.128"
surrealdb = { version = "= 2.0.1", features = ["kv-mem"] }
tokio = { version = "= 1.40.0", features = ["full"] }
tower-cookies = "= 0.10.0"
tower-http = { version = "= 0.6.0", features = ["fs"] }
uuid = { version = "= 1.10.0", features = ["v4", "fast-rng"] }
